--- a/llvm_code_generation1/README
+++ b/llvm_code_generation1/README
@@ -1,12 +1,14 @@
-The Alex scanner file is Scanner.x and the Happy grammar file is Newl.y. To compile the program run
-make
-The output is "newl" is a basic type checker for the NewL language. To test the type checker do
-cat ./test_files/type_success_test1.newl | ./newl in the directory with newl. It will report that the semantic analysis was successful.
+The directory layout is
+Scanner.x     	     Alex scanner.
+Newl.y		     Happy parser.
+TypeNames.hs	     Types used in the parser, type checker, and code generator.
+TypeChecker.hs	     Type checker.
+CodeGen.hs	     Code generator using LLVM.
+Util.hs		     Stolen from the LLVM Haskell bindings.
 
-To remove all compiled files run make clean.
+Run "make" to compile the files the output is "newl" which a basic code generator for the NewL language. The code it generators is the LLVM IR language. The LLVM IR language reference is located at http://llvm.org/docs/LangRef.html. 
 
-To test error reporting run
-1. cat ./test_files/lexer_error_test1.txt | ./newl
-It will report "newl: lexical error @ line xx and column yy" where xx and yy are the line and column numbers of the error.
-2. cat ..test_files/type_error_noclass.newl | ./newl
-It will report that there's a missing class definition.
+To test the code generator run
+cat ./test_files/test1.newl | ./newl in the directory with newl. It will output the LLVM IR code.
+
+To remove all compiled files run "make clean".
